# Sps

./: .gitignore  CONSTITUTION.md  Cargo.toml  LICENSE  README.md  sps.py
apps/: gradio_app.py
src/: lib.rs  main.rs  mod.rs
src/abductive/: explanation_ranker.rs  hypothesis_generator.rs  occam_filter.rs
src/autonomy/: autonomous_agent.rs  autonomy_manager.rs  goal_driven_executor.rs  mod.rs  proactive_planner.rs
src/canonical_state/: cognition_state.rs  evolution_state.rs  execution_state.rs  goal_state.rs  memory_state.rs  mod.rs  planner_state.rs  reflection_state.rs  world_state.rs
src/causal/: causal_reasoner.rs  counterfactual.rs  intervention_model.rs
src/cli/: commands.rs  commands_extended.rs  mod.rs  parser.rs  terminal.rs
src/context_engine/: context.rs
src/execution/: execution_context.rs  execution_monitor.rs  execution_recovery.rs  executor.rs  mod.rs
src/goal_system/: goal.rs  goal_allocator.rs  goal_evaluator.rs  goal_registry.rs  goal_tracker.rs  mod.rs  value_system.rs
src/governance/: authority_resolver.rs  delegation_ledger.rs  governance_audit.rs  governance_event.rs  governance_policy.rs  mod.rs
src/inductive/: confidence_decay.rs  generalization.rs  mod.rs  pattern_detector.rs
src/kernel_core/: canonical_state.rs  constitution_checker.rs  event.rs  event_hash.rs  event_id.rs  event_id.rs.orig  event_id.rs.patch  event_id.rs.rej  event_metadata.rs  invariant_checker.rs  logical_time.rs  reducer.rs  replay_stress_test.rs  replay_validator.rs  verification_suite.rs
src/kernel_runtime/: boot_manager.rs  checkpoint_manager.rs  (+7 more)
(+151 files in other folders)
